--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@mui/styled-engine-sc": "^5.4.2",
     "animate-css-grid": "^1.4.3",
     "antd": "^4.19.2",
+    "antd-country-phone-input": "^4.3.1",
     "bootstrap": "^4.3.1",
+    "flagpack": "^1.0.5",
     "i18next": "^21.6.13",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
@@ -48,7 +50,8 @@
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
     "slick-carousel": "^1.8.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "world_countries_lists": "^2.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
