--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.1.1",
     "react-scroll": "^1.7.16",
+    "react-share": "^4.4.0",
     "react-slick": "^0.25.2",
     "react-sticky-header": "^0.2.0",
     "reactjs-countdown": "0.0.8",
