--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "antd-country-phone-input": "^4.3.1",
     "bootstrap": "^4.3.1",
     "flagpack": "^1.0.5",
+    "google-libphonenumber": "^3.2.27",
     "i18next": "^21.6.13",
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.3.2",
     "imagesloaded": "^4.1.4",
+    "intl-tel-input": "^17.0.16",
     "isotope-layout": "^3.0.6",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
