--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-share": "^4.4.0",
     "react-slick": "^0.25.2",
     "react-sticky-header": "^0.2.0",
+    "react-whatsapp": "^0.2.1",
     "reactjs-countdown": "0.0.8",
     "reactstrap": "^8.2.0",
     "redux": "^4.1.2",
