--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "imagesloaded": "^4.1.4",
     "intl-tel-input": "^17.0.16",
     "isotope-layout": "^3.0.6",
+    "jspdf": "^2.5.1",
     "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-animated-css": "^1.2.1",
+    "react-barcode": "^1.4.1",
     "react-base64-downloader": "^2.1.7",
     "react-bootstrap": "^1.0.0",
     "react-countdown-now": "^2.1.2",
